# ChangeLog for app-leechcraft/lc-mellonetray
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-mellonetray/ChangeLog,v 1.5 2014/04/10 17:58:31 maksbotan Exp $

*lc-mellonetray-0.6.65 (10 Apr 2014)

  10 Apr 2014; Maxim Koltsov <maksbotan@gentoo.org>
  +lc-mellonetray-0.6.65.ebuild:
  Bump LeechCraft to 0.5.65, thanks to 0xd34df00d.

  03 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> lc-mellonetray-0.6.60.ebuild:
  x86 stable wrt bug #500914

  02 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> lc-mellonetray-0.6.60.ebuild:
  amd64 stable wrt bug #500914

*lc-mellonetray-0.6.60 (08 Jan 2014)

  08 Jan 2014; Maxim Koltsov <maksbotan@gentoo.org>
  +lc-mellonetray-0.6.60.ebuild:
  Bump to LeecChraft-0.6.60 release, thanks to 0xd34df00d.

*lc-mellonetray-9999 (24 May 2013)

  24 May 2013; Sergey Popov <pinkbyte@gentoo.org> +lc-mellonetray-9999.ebuild,
  +metadata.xml:
  Initial commit, thanks to 0xd34df00d