@@ -1,6 +1,12 @@
 # ChangeLog for app-leechcraft/lc-mellonetray
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-mellonetray/ChangeLog,v 1.5 2014/04/10 17:58:31 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-mellonetray/ChangeLog,v 1.6 2014/08/03 18:57:15 maksbotan Exp $
+
+*lc-mellonetray-0.6.70 (03 Aug 2014)
+
+  03 Aug 2014; Maxim Koltsov <maksbotan@gentoo.org>
+  +lc-mellonetray-0.6.70.ebuild:
+  Bump LeechCraft to 0.6.70, thanks to 0xd34df00d.
 
 *lc-mellonetray-0.6.65 (10 Apr 2014)
 
